force-app/main/default/objects/Invoice__c/fields/Amount_Report__c.field-meta.xml
<CustomField>
    <fullName>Amount_Report__c</fullName>
    <description>Takes Amount_c field and cuts off the currency text, to get only the float</description>
    <formula>Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>For report purposes, gives raw number of the amount without currency text</inlineHelpText>
    <label>Amount Report</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>