force-app/main/default/objects/Invoice__c/fields/Amount_without_Tax__c.field-meta.xml
<CustomField>
    <fullName>Amount_without_Tax__c</fullName>
    <description>AmountWithoutTax__c</description>
    <formula>AmountWithoutTax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>AmountWithoutTax__c</inlineHelpText>
    <label>Amount without Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>