force-app/main/default/objects/Invoice__c/fields/AmountWithoutTax__c.field-meta.xml
<CustomField>
    <fullName>AmountWithoutTax__c</fullName>
    <label>Amount Without Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>