force-app/main/default/objects/Invoice__c/fields/BalanceCleared__c.field-meta.xml
<CustomField>
    <fullName>BalanceCleared__c</fullName>
    <formula>TEXT(CurrencyIsoCode) + &quot; &quot; +
IF(Balance__c &lt; 0,&quot;-&quot;,&quot;&quot;) +
IF( 
  ABS(Balance__c) &gt;= 1000000, 
  TEXT(FLOOR(ABS(Balance__c) / 1000000)) &amp; &quot;.&quot;, 
  &quot;&quot;) + 
IF( 
  ABS(Balance__c) &gt;= 1000, 
  RIGHT(TEXT(FLOOR(ABS(Balance__c) / 1000)), 3) &amp; &quot;.&quot;, 
  &quot;&quot;) + 
RIGHT(TEXT(FLOOR(ABS(Balance__c))), 3) &amp; &quot;,&quot; &amp; 
IF( 
  MOD(ABS(Balance__c) , 1) * 100 &lt; 10, 
  &quot;0&quot; &amp; TEXT(ROUND(MOD(ABS(Balance__c) , 1), 2) * 100), 
  TEXT(MIN(ROUND(MOD(ABS(Balance__c) , 1), 2) * 100, 99)) 
)
 + IF(Cleared__c,&quot;  &quot; +  IMAGE(&quot;/img/func_icons/util/checkmark16.gif&quot;,&quot;Cleared&quot;),&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance/Cleared</label>
    <type>Text</type>
</CustomField>