force-app/main/default/objects/Invoice__c/fields/Base64Pdf__c.field-meta.xml
<CustomField>
    <fullName>Base64Pdf__c</fullName>
    <label>Base64Pdf</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>