force-app/main/default/objects/Invoice__c/fields/Cleared__c.field-meta.xml
<CustomField>
    <fullName>Cleared__c</fullName>
    <formula>Status__c = &apos;Posted&apos; &amp;&amp;  Balance__c = 0 &amp;&amp; 
(  QualifyingPaymentCount__c &gt; 0 ||  abs(CreditBalanceAdjustmentAmount__c) = abs(Amount__c)  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cleared</label>
    <type>Checkbox</type>
</CustomField>