force-app/main/default/objects/Invoice__c/fields/Created_time_GMT__c.field-meta.xml
<CustomField>
    <fullName>Created_time_GMT__c</fullName>
    <formula>TEXT(TIMEVALUE( CreatedDate ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created time GMT</label>
    <type>Text</type>
</CustomField>