force-app/main/default/objects/Invoice__c/fields/CreditBalanceAdjustmentAmount__c.field-meta.xml
<CustomField>
    <fullName>CreditBalanceAdjustmentAmount__c</fullName>
    <label>Credit Balance Adjustment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>