force-app/main/default/objects/Invoice__c/fields/Days_Overdue__c.field-meta.xml
<CustomField>
    <fullName>Days_Overdue__c</fullName>
    <formula>IF(AND(Balance__c &gt; 0,Status__c=&quot;Posted&quot;), 1, 0)*
MAX(
0,
TODAY()-

IF(
OR(CONTAINS( Account__r.PaymentTerm__c,&quot;Instal&quot;), Account__r.Batch__c = &quot;Batch4&quot; ),

DueDate__c + 60,

DueDate__c
)

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Overdue (Dunning)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>