force-app/main/default/objects/Invoice__c/fields/EmailContactId__c.field-meta.xml
<CustomField>
    <fullName>EmailContactId__c</fullName>
    <formula>Account__r.SF_BillTo_Contact__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EmailContactId</label>
    <type>Text</type>
</CustomField>