force-app/main/default/objects/Invoice__c/fields/Forget_Bundle__c.field-meta.xml
<CustomField>
    <fullName>Forget_Bundle__c</fullName>
    <defaultValue>false</defaultValue>
    <description>https://jira.orderbird.com/browse/CDS-3246
Use for Invoices were Bundling is &quot;hiding&quot; the explicit cost of licenses or products</description>
    <label>Forget Bundle</label>
    <type>Checkbox</type>
</CustomField>