force-app/main/default/objects/Invoice__c/fields/HasBase64Pdf__c.field-meta.xml
<CustomField>
    <fullName>HasBase64Pdf__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HasBase64Pdf</label>
    <type>Checkbox</type>
</CustomField>