force-app/main/default/objects/Invoice__c/fields/HasCovidSpecial__c.field-meta.xml
<CustomField>
    <fullName>HasCovidSpecial__c</fullName>
    <formula>Amount__c &lt;&gt; PreCOVIDAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HasCovidSpecial</label>
    <type>Checkbox</type>
</CustomField>