force-app/main/default/objects/Invoice__c/fields/HasFullBalance__c.field-meta.xml
<CustomField>
    <fullName>HasFullBalance__c</fullName>
    <formula>Balance__c = Amount__c &amp;&amp; Amount__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Full Balance</label>
    <type>Checkbox</type>
</CustomField>