force-app/main/default/objects/Invoice__c/fields/HeldInvoiceItems__c.field-meta.xml
<CustomField>
    <fullName>HeldInvoiceItems__c</fullName>
    <description>These are Invoice Items without related SLIs... we don&apos;t want to send these out because there will be blank lines on the invoice.</description>
    <label>Held Invoice Items</label>
    <summaryForeignKey>InvoiceLineItem__c.Invoice__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>