force-app/main/default/objects/Invoice__c/fields/IncludesHardware__c.field-meta.xml
<CustomField>
    <fullName>IncludesHardware__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This invoice includes physical goods, which require a fulfilment. Workflow XXX is checking on creation of invoice, if requirements are meet.</description>
    <inlineHelpText>This invoice includes physical goods, which require a fulfilment.</inlineHelpText>
    <label>Invoice includes physical goods</label>
    <type>Checkbox</type>
</CustomField>