force-app/main/default/objects/Invoice__c/fields/IncludesOneTime__c.field-meta.xml
<CustomField>
    <fullName>IncludesOneTime__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Includes One Time</label>
    <type>Checkbox</type>
</CustomField>