force-app/main/default/objects/Invoice__c/fields/IncludesRecurring__c.field-meta.xml
<CustomField>
    <fullName>IncludesRecurring__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Includes Recurring</label>
    <type>Checkbox</type>
</CustomField>