force-app/main/default/objects/Invoice__c/fields/IncludesUsage__c.field-meta.xml
<CustomField>
    <fullName>IncludesUsage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Includes Usage</label>
    <type>Checkbox</type>
</CustomField>