force-app/main/default/objects/Invoice__c/fields/InstalmentCharges__c.field-meta.xml
<CustomField>
    <fullName>InstalmentCharges__c</fullName>
    <label>Instalment Charges</label>
    <summaryFilterItems>
        <field>InvoiceLineItem__c.ChargeName__c</field>
        <operation>equals</operation>
        <value>Payment by Instalments Setup Fee</value>
    </summaryFilterItems>
    <summaryForeignKey>InvoiceLineItem__c.Invoice__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>