force-app/main/default/objects/Invoice__c/fields/InvoiceDate__c.field-meta.xml
<CustomField>
    <fullName>InvoiceDate__c</fullName>
    <label>Invoice Date</label>
    <type>Date</type>
</CustomField>