force-app/main/default/objects/Invoice__c/fields/LineItemTotal__c.field-meta.xml
<CustomField>
    <fullName>LineItemTotal__c</fullName>
    <label>Line Item Total</label>
    <summarizedField>InvoiceLineItem__c.TotalAmount__c</summarizedField>
    <summaryForeignKey>InvoiceLineItem__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>