force-app/main/default/objects/Invoice__c/fields/MismatchTotal__c.field-meta.xml
<CustomField>
    <fullName>MismatchTotal__c</fullName>
    <formula>Amount__c  &lt;&gt;  LineItemTotal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mismatch Total</label>
    <type>Checkbox</type>
</CustomField>