force-app/main/default/objects/Invoice__c/fields/MixedTax__c.field-meta.xml
<CustomField>
    <fullName>MixedTax__c</fullName>
    <formula>if(
if( abs(Tax_Rollup_0__c) &gt; 0 , 1, 0)
+
if( abs(Tax_Rollup_16__c) &gt; 0 , 1, 0)
+
if( abs(Tax_Rollup_19__c) &gt; 0 , 1, 0)
&gt; 1, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mixed Tax</label>
    <type>Checkbox</type>
</CustomField>