force-app/main/default/objects/Invoice__c/fields/PostedDate__c.field-meta.xml
<CustomField>
    <fullName>PostedDate__c</fullName>
    <label>Posted Date</label>
    <type>DateTime</type>
</CustomField>