force-app/main/default/objects/Invoice__c/fields/PreCOVIDAmount__c.field-meta.xml
<CustomField>
    <fullName>PreCOVIDAmount__c</fullName>
    <label>Pre-COVID Total Amount</label>
    <summarizedField>InvoiceLineItem__c.PreCOVIDAmount__c</summarizedField>
    <summaryForeignKey>InvoiceLineItem__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>