force-app/main/default/objects/Invoice__c/fields/QualifyingPaymentCount__c.field-meta.xml
<CustomField>
    <fullName>QualifyingPaymentCount__c</fullName>
    <label>Number of Qualifying Payments</label>
    <summaryFilterItems>
        <field>InvoicePayment__c.IsQualifyingPayment__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>InvoicePayment__c.Invoice__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>