force-app/main/default/objects/Invoice__c/fields/SuppressTriggeredEmail__c.field-meta.xml
<CustomField>
    <fullName>SuppressTriggeredEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Suppress Triggered Email</label>
    <type>Checkbox</type>
</CustomField>