force-app/main/default/objects/Invoice__c/fields/TargetDate__c.field-meta.xml
<CustomField>
    <fullName>TargetDate__c</fullName>
    <label>Target Date</label>
    <type>Date</type>
</CustomField>