force-app/main/default/objects/Invoice__c/fields/Tax_Rollup_0__c.field-meta.xml
<CustomField>
    <fullName>Tax_Rollup_0__c</fullName>
    <label>Tax Rollup 0%</label>
    <summaryFilterItems>
        <field>InvoiceLineItem__c.TaxCategory__c</field>
        <operation>equals</operation>
        <value>0%</value>
    </summaryFilterItems>
    <summaryForeignKey>InvoiceLineItem__c.Invoice__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>