force-app/main/default/objects/Invoice__c/fields/Tax_Rollup_19__c.field-meta.xml
<CustomField>
    <fullName>Tax_Rollup_19__c</fullName>
    <label>Tax Rollup 19%</label>
    <summarizedField>InvoiceLineItem__c.TaxAmount__c</summarizedField>
    <summaryFilterItems>
        <field>InvoiceLineItem__c.TaxCategory__c</field>
        <operation>equals</operation>
        <value>19%</value>
    </summaryFilterItems>
    <summaryForeignKey>InvoiceLineItem__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>