force-app/main/default/objects/Invoice__c/fields/TaxExemptAmount__c.field-meta.xml
<CustomField>
    <fullName>TaxExemptAmount__c</fullName>
    <label>Tax Exempt Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>