force-app/main/default/objects/Invoice__c/fields/Temp_Mismatch_TER__c.field-meta.xml
<CustomField>
    <fullName>Temp_Mismatch_TER__c</fullName>
    <formula>TaxExemptReason__c &lt;&gt;  TEXT(Account__r.Tax_Exempt_Reason__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Temp: Mismatch TER</label>
    <type>Checkbox</type>
</CustomField>