force-app/main/default/objects/Invoice__c/fields/Temp_Mismatch_VATId__c.field-meta.xml
<CustomField>
    <fullName>Temp_Mismatch_VATId__c</fullName>
    <formula>NOT(VATId__c  ==  Account__r.VATNumber__c
|| (ISBLANK(VATId__c) &amp;&amp; Account__r.VATNumber__c = &quot;userdata: NULL&quot;)
|| (ISBLANK(Account__r.VATNumber__c) &amp;&amp; VATId__c = &quot;userdata: NULL&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Temp: Mismatch VATId</label>
    <type>Checkbox</type>
</CustomField>