force-app/main/default/objects/Invoice__c/fields/TrailingEmailSent__c.field-meta.xml
<CustomField>
    <fullName>TrailingEmailSent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trailing Email Sent</label>
    <type>Checkbox</type>
</CustomField>