force-app/main/default/objects/Invoice__c/fields/TSE_Pro_Rata__c.field-meta.xml
<CustomField>
    <fullName>TSE_Pro_Rata__c</fullName>
    <description>https://jira.orderbird.com/browse/CDS-2307
Stakeholder: Knowlegde</description>
    <label>TSE Pro Rata</label>
    <summarizedField>InvoiceLineItem__c.ChargeAmount__c</summarizedField>
    <summaryFilterItems>
        <field>InvoiceLineItem__c.ChargeName__c</field>
        <operation>equals</operation>
        <value>orderbird online TSE 1 year</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>InvoiceLineItem__c.ChargeAmount__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>InvoiceLineItem__c.ChargeAmount__c</field>
        <operation>lessThan</operation>
        <value>99</value>
    </summaryFilterItems>
    <summaryForeignKey>InvoiceLineItem__c.Invoice__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>