force-app/main/default/objects/Invoice__c/fields/UpdatedDate__c.field-meta.xml
<CustomField>
    <fullName>UpdatedDate__c</fullName>
    <label>Updated Date</label>
    <type>DateTime</type>
</CustomField>