force-app/main/default/objects/Invoice__c/fields/VAT_Adjustment_Lines__c.field-meta.xml
<CustomField>
    <fullName>VAT_Adjustment_Lines__c</fullName>
    <label>VAT Adjustment Lines</label>
    <summarizedField>InvoiceLineItem__c.VAT_Adjustment_Line__c</summarizedField>
    <summaryForeignKey>InvoiceLineItem__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>