force-app/main/default/objects/Invoice__c/fields/VAT_ref__c.field-meta.xml
<CustomField>
    <fullName>VAT_ref__c</fullName>
    <label>VAT Adjustment Reference</label>
    <length>23</length>
    <type>Text</type>
</CustomField>