force-app/main/default/objects/Invoice__c/fields/VAT_TaxLabel__c.field-meta.xml
<CustomField>
    <fullName>VAT_TaxLabel__c</fullName>
    <formula>CASE( Account__r.BillingCountry , 
  &apos;Germany&apos;,&apos;19%&apos;, 
  &apos;Austria&apos;, &apos;20% AT&apos;,
  &apos;France&apos;, &apos;20% FR&apos;,
  &apos;Spain&apos;, &apos;21% ES&apos;,
  &apos;Luxembourg&apos;, &apos;17% LX&apos;,
  &apos;Netherlands&apos;, &apos;21% NL&apos;, 
   &apos;0%&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VAT TaxLabel</label>
    <type>Text</type>
</CustomField>