force-app/main/default/objects/Invoice__c/fields/VATId__c.field-meta.xml
<CustomField>
    <fullName>VATId__c</fullName>
    <label>VAT Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>