force-app/main/default/objects/Invoice__c/fields/VATId_Status__c.field-meta.xml
<CustomField>
    <fullName>VATId_Status__c</fullName>
    <defaultValue>9</defaultValue>
    <description>In case the related account has a VAT number and is exempt of taxation, shows if the VAT Number of the account is valid at the moment of create the invoice in SF.</description>
    <inlineHelpText>0 = validation failed
1 = valid
2 = invalid
9 = Not Validated or  N/A</inlineHelpText>
    <label>VATId Status</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>